micromobility_car_object_avoidance/local/Projects/ros2_ws/log/build_2022-05-28_11-48-05/object_avoidance/stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/user/Projects/ros2_ws/install/object_avoidance/lib/python3.8/site-packages/object_avoidance/object_detection.py", line 52
    await self.object_detection()
    ^
SyntaxError: 'await' outside async function

